--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <form action="http://localhost:8080/signup" method="post">
-        <input type="text" name="username" id="username">
+        <input type="email" name="email" id="email">
         <input type="password" name="password" id="password">
         <input type="submit">
     </form>
